Production/force-app/main/default/objects/IMS_Yearly_Stats__c/fields/Total_Yearly_Typhim_Doses__c.field-meta.xml
<CustomField>
    <fullName>Total_Yearly_Typhim_Doses__c</fullName>
    <formula>YTD_Typhim_Single_Pre_fill_Syringe__c +  YTD_Typhim_VI_20_Dose_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Yearly Typhim Doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>