Production/force-app/main/default/objects/IMS_Yearly_Stats__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <length>6</length>
    <type>Text</type>
</CustomField>