Production/force-app/main/default/objects/IMS_Yearly_Stats__c/fields/Yearly_Total_Typhoid_Fever_Vaccine__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Total_Typhoid_Fever_Vaccine__c</fullName>
    <formula>YTD_Vivotif_Total_Rollup__c +  Total_Yearly_Typhim_Doses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly Total Typhoid Fever Vaccine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>