Production/force-app/main/default/objects/IMS_Yearly_Stats__c/fields/YTD_Typhim_Single_Pre_fill_Syringe__c.field-meta.xml
<CustomField>
    <fullName>YTD_Typhim_Single_Pre_fill_Syringe__c</fullName>
    <description>Rollup of VI Single Dose Rollup</description>
    <label>YTD Typhim Single Pre-fill Syringe</label>
    <summarizedField>IMS_Monthly_Stats__c.Monthly_Typhim_VI_Single_Dose_Rollup__c</summarizedField>
    <summaryForeignKey>IMS_Monthly_Stats__c.IMS_Year__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>