Production/force-app/main/default/objects/IMS_Yearly_Stats__c/fields/YTD_Vivotif_Total_Rollup__c.field-meta.xml
<CustomField>
    <fullName>YTD_Vivotif_Total_Rollup__c</fullName>
    <description>Rollup of Monthly Vivotif Total Rollup</description>
    <label>YTD Vivotif Total Rollup</label>
    <summarizedField>IMS_Monthly_Stats__c.Monthly_Vivotif_Total_Rollup__c</summarizedField>
    <summaryForeignKey>IMS_Monthly_Stats__c.IMS_Year__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>